--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ maruku:
   png_url:     /images/latex
 
 # custom Variables
-title: lawn of laerador
+title: Lawn of laerador
 domain: "http://lc3dyr.de"
