--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,10 @@ maruku:
   png_dir:     images/latex
   png_url:     /images/latex
 
+include: [.htaccess]
 # custom Variables
 name: Lawn of laerador
 description: "(:"
 domain: "http://lc3dyr.de"
 url: http://lc3dyr.de/blog
-
+refresh: 0
