--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,5 @@ project_dir:   lepro
 name: Lawn of laerador
 description: "(:"
 domain: "http://lc3dyr.de"
-url: http://lc3dyr.de/blog
+url: "http://lc3dyr.de"
 refresh: 0
