Now with Redcarpet2 Support for Github Flavour

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ source:        _src
 destination:   _site
 plugins:       _src/_plugins
 
-markdown:      redcarpet
+markdown:      redcarpet2
+redcarpet:
+    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
 
 pygments:      true
 permalink:     /blog/:year/:month/:day/:title/
