--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,6 @@ category_dir:  blog/categories/
 name: Lawn of laerador
 description: "(:"
 author: laerador
-# domain: "http://lc3dyr.de"
-# url: "http://lc3dyr.de"
-domain: "localhost:4000"
-url: "localhost:4000"
+domain: "http://lc3dyr.de"
+url: "http://lc3dyr.de"
 refresh: 0
